# shell

./: .gitignore  Cargo.toml  README.md  commands.md
src/: colors.rs  config.rs  input.rs  main.rs
src/modules/: character.rs  directory.rs  duration.rs  git.rs  lang.rs  mod.rs  ssh.rs  time.rs  user.rs  venv.rs
